--- a/app/src/main/res/layout/activity_add_customer.xml
+++ b/app/src/main/res/layout/activity_add_customer.xml
@@ -21,7 +21,7 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:title="  Add New Customer"
+            app:title=" New Customer"
             app:titleTextAppearance="@style/TextAppearance.AppCompat.Display1" />
 
         <Button
